--- a/res/main/i18n/default/labels.json
+++ b/res/main/i18n/default/labels.json
@@ -554,6 +554,7 @@
 	"search": "Search",
 	"sedit": {
 		"active": "Active",
+    "compensate": "Compensate",
 		"disabled": "Disabled",
 		"enabled": "Enabled",
 		"fade_in": "Fade in",
@@ -565,6 +566,11 @@
 		"predelay": "Pre-delay",
 		"reverse": "Reverse",
 		"sample_num": "Sample #",
+    "stretch": "Stretch",
+    "stretch_chunk": "Chunk size",
+    "stretch_end": "End",
+    "stretch_fade": "Fade length",
+    "stretch_start": "Start",
 		"tail_cut": "Tail cut"
 	},
 	"settings": "Settings",
